<resources>
    <string name="app_name">GameToday</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="introducir_correo">Introduce el correo</string>
    <string name="introducir_contrasenia">Introduce la contraseña</string>
    <string name="introducir_usuario">Introduce el correo</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="introducir_contrasenia_check">confirma la contraseña</string>
    <string name="toast_vacio">Debe rellenar todos los campos</string>
    <string name="toast_contra_check_fail">Las contraseñas no coinciden</string>
    <string name="toast_nombre_existe">El nombre de usuario ya existe</string>
    <string name="toast_correo_existe">El correo ya existe</string>
    <string name="user_registrado">Usuario registrado exitosamente</string>
    <string name="introducir_usuario_reg">Introduce el nombre de usuario</string>
    <string name="toast_no_existe">El usuario introducido no existe</string>
    <string name="toast_correo_invalido">Introduce un correo valido</string>
    <string name="nombre_no_correo">El nombre de usuario no puede ser un correo</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_iniciar">INICIAR SESIÓN</string>
    <string name="btn_registar">REGISTRAR</string>
    <string name="tv_registro">REGISTRO DE USUARIO</string>
    <string name="toast_contra_corta">La contraseña debe tener al menos 6 carácteres</string>
    <string name="toast_usuario_creado">Usuario creado correctamente</string>
    <string name="toast_usuario_no_creado">El usuario no se pudo crear</string>
    <string name="toast_intro_correo">No ha introducido el correo</string>
    <string name="toast_intro_contra">No ha introducido la contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fd_btn_cancelar">cancelar</string>
    <string name="toast_publicacion_subida">Publicacion subida</string>
    <string name="toast_prueba_exitosa">AAAAAAAAAAAAAAAAAAAAAAAAAA</string>
    <string name="toast_debe_escribir">Debe escribir una publicacion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="btn_cerrar_sesion">CERRAR SESIÓN</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="btn_cambiar_foto">CAMBIAR FOTO</string>
    <string name="toast_foto_subida">Foto subida con éxito</string>
    <string name="btn_seguir">SEGUIR</string>
    <string name="btn_siguiendo">SIGUIENDO</string>
    <string name="introduce_search">Introduce un nombre de usuario para buscarlo</string>
    <string name="no_result_search">No encontramos lo que buscas :(</string>
    <string name="borrar_publi_confirm">¿BORRAR PUBLICACIÓN?</string>
    <string name="cerrar_sesion_confirm">¿CERRAR SESIÓN?</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="seguidores">Seguidores</string>
    <string name="publiciones">Publicaciones</string>
    <string name="likes">Likes</string>
    <string name="multimedia">Multimedia</string>
    <string name="editar_perfil"> Editar perfil </string>
    <string name="msj_saliente">"Tú: "</string>
    <string name="escribiendo">Escribiendo...</string>
    <string name="ayer">Ayer</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="menu_borrar">Borrar</string>
    <string name="menu_editar">Editar</string>
    <string name="hoy">Hoy</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="bio">Bio</string>
    <string name="cambiar_tema">CAMBIAR TEMA</string>
    <string name="morao">MORADO \nPSÍQUICO</string>
    <string name="rojo">ROJO \nARDENT</string>
    <string name="verde">VERDE \nGAMEBOY</string>
    <string name="azul">AZUL \nSÓNICO</string>
    <string name="naranja">NARANJA \nMISTERIO</string>
    <string name="btn_aplicar">APLICAR</string>
    <string name="cambiar_fondo">CAMBIAR FONDO</string>
    <string name="tema_aplicado">Tema aplicado correctamente</string>
    <string name="ajustes">AJUSTES</string>
    <string name="blanco">BLANCO \nFANTASMA</string>
</resources>