<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_guay"
    tools:context=".EditarPerfilActivity"
    android:padding="@dimen/padding">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivFotoPerfilEditarPerfil"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/default_pic"/>

    <LinearLayout
        android:id="@+id/btnCambiarFotoPerfil"
        android:layout_below="@id/ivFotoPerfilEditarPerfil"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cambiar_foto"
            android:textColor="@color/morao_chilling"
            android:textSize="12sp"
            android:fontFamily="@font/conthrax_sb"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/morao_chilling"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/padding"
        android:id="@+id/llNombreEditarPerfil"
        android:layout_below="@id/btnCambiarFotoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/morao_trans_menos"
            android:fontFamily="@font/conthrax_sb"
            android:text="@string/nombre"
            />

        <EditText
            android:id="@+id/etCambiarUsername"
            android:backgroundTint="@color/morao_chilling"
            android:textColor="@color/morao_chilling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBioEditarPerfil"
        android:layout_marginTop="@dimen/padding"
        android:layout_below="@id/llNombreEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/morao_trans_menos"
            android:fontFamily="@font/conthrax_sb"
            android:text="@string/bio"
            />

        <EditText
            android:id="@+id/etCambiarBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/morao_chilling"
            android:maxLines="15"
            android:textColor="@color/morao_chilling" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotonesEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/padding">

        <Button
            android:id="@+id/btnCancelarEditarPerfil"
            android:fontFamily="@font/conthrax_sb"
            android:background="@drawable/outline_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancelar" />
        <View
            android:layout_width="15dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnAceptarEditarPerfil"
            android:fontFamily="@font/conthrax_sb"
            android:background="@drawable/outline_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llBioEditarPerfil"
        >

        <TextView
            android:id="@+id/tvContadorBio"
            android:layout_width="wrap_content"
            android:text="0"
            android:textColor="@color/morao_trans_menos"
            android:fontFamily="@font/conthrax_sb"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="/250"
            android:textColor="@color/morao_trans_menos"
            android:fontFamily="@font/conthrax_sb"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>